[package]
name = "adversarial-video-padding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
video-rs = { version = "0.4.1", features = ["ndarray"] }

[profile.release]
debug = true