[package]
name = "adversarial-video-padding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boids = { version = "0.1.0", features = ["rayon"] }
cgmath = "0.18.0"
embedded-graphics = "0.8.1"
rand = "0.8.5"

[profile.release]
debug = true
